--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -17,5 +17,5 @@
 	helper = !/usr/bin/gh auth git-credential
 
 [user]
-	name = haotongye
-	email = haotongye@gmail.com
+	name = 0xYYY
+	email = 0xYYY@protonmail.com
