--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -3,10 +3,12 @@
     pager = delta
 
 [interactive]
-    diffFilter = delta --color-only
+    diffFilter = delta --color-only --dark
 
 [delta]
-    features = line-numbers decorations
+    features = decorations navigate
+    line-numbers = true
+    side-whitespace = true
     whitespace-error-style = 22 reverse
     syntax-theme = Solarized (dark)
 
@@ -19,3 +21,6 @@
 [user]
 	name = 0xYYY
 	email = 0xYYY@protonmail.com
+
+[init]
+	defaultBranch = main
